updated with custom exceptions

--- a/Racetrack_Management_v3/Racetrack/pom.xml
+++ b/Racetrack_Management_v3/Racetrack/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.restapi</groupId>
+			<artifactId>crudoperations</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
